# sukoon

./: .editorconfig  .gitattributes  .gitignore  .oxfmtignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  commitlint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_eval.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  stale.yml
apps/desktop/: README.md  next.config.ts  package.json
apps/desktop/app/: globals.css  layout.tsx  page.tsx
apps/desktop/scripts/: gen-dmg-background.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: companion.rs  lib.rs  main.rs
apps/extension/: README.md  package.json  popup.html  tsconfig.json  vite.config.ts
apps/extension/public/: content-loader.js  manifest.json
apps/extension/scripts/: bundle-worklet.mjs
apps/extension/src/: audio-graph.ts  background.ts  button-store.ts  content.ts  debug.ts  env.d.ts  loudness.ts  popup.css  popup.tsx  prefs.ts
apps/extension/src/adapters/: adapters.test.ts  base.ts  facebook.ts  generic.ts  index.ts  instagram.ts  mount-lazy.ts  mount.tsx  shared.ts  types.ts  x.ts  youtube.ts
apps/extension/src/adapters/mounts/: common.tsx  facebook.tsx  generic.tsx  instagram.tsx  x.tsx  youtube.tsx
apps/extension/worklet/: polyfills.js  processor.js
apps/web/: README.md  index.html  package.json  tsconfig.json
apps/web/src/: main.ts
docs/: README.md  design-considerations.md
docs/architecture/: core.md  engines.md  index.md  pipeline.md
docs/contributing/: index.md  model-eval.md
docs/halal-aware/: index.md  scholarly-positions.md
docs/reference/: cli.md  config.md  core-api.md  performance.md
docs/research/: extension-trials.md  own-model-plan.md
docs/start/: concepts.md  installation.md  quickstart.md
