[workspace]
resolver = "2"
members = ["packages/core", "packages/cli"]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["Tamim Bin Hakim <tamimbinhakim.work@gmail.com>"]
repository = "https://github.com/tamimbinhakim/sukoon"
homepage = "https://github.com/tamimbinhakim/sukoon"

[workspace.dependencies]
sukoon-core = { path = "packages/core", version = "0.1.0-alpha.0" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
