[package]
name = "sukoon-desktop"
description = "Sukoon desktop app — Tauri shell over sukoon-core. Drag-and-drop UI and the extension's local companion bridge."
version = "0.1.0-alpha.0"
authors = ["Tamim Bin Hakim (@tamimbinhakim)"]
license = "Apache-2.0"
repository = "https://github.com/tamimbinhakim/sukoon"
edition = "2021"
rust-version = "1.80"
publish = false

# This Tauri crate carries its own heavy dependency tree (ONNX Runtime, wry, …) and is built via
# `pnpm --filter @sukoon/desktop tauri`, so it is its OWN workspace root rather than a member of the
# repo's Cargo workspace (which is just `packages/core` + `packages/cli`). The empty `[workspace]`
# table below detaches it.
[workspace]

[lib]
# The `_lib` name keeps the desktop binary and the (mobile-capable) library distinct; `main.rs`
# just calls `run()`.
name = "sukoon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Companion bridge: a localhost WebSocket server the browser extension connects to.
tokio = { version = "1", features = ["net", "rt", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

# The one engine. Built with `dfn` (which implies `onnx`), so the Fast (DeepFilterNet), HQ (MDX-Net),
# and Fallback (MDX-lite) engines are all real here — with the platform GPU accelerator
# (CoreML/DirectML/CUDA) auto-selected by core. This shell never reimplements separation.
sukoon-core = { path = "../../../packages/core", features = ["dfn"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
